@@ -6,6 +6,7 @@ o Support file://... in URL. File will be copied from the
   local filesystem. Suggested by aidan.carty@entropy.ie.
 o sid-msg.map will now be updated by default.
 o A few minor cleanups.
+o Warn instead of exit in case of invalid lines in the config file.
 
 
 
